First Issue:- Fix: Overflow in Navbar by Making Table Scrollable
Second Issue:- Fix: Overflow in Navbar by Making Table Scrollable in Manage Funds

Third Issue:- Fix: Overflow in Navbar by Making Table Scrollable in Payment Type fix: #2009

--- a/src/app/organization/manage-funds/manage-funds.component.scss
+++ b/src/app/organization/manage-funds/manage-funds.component.scss
@@ -9,3 +9,8 @@ table {
     cursor: pointer;
   }
 }
+
+.container{
+  overflow-x: auto;
+  max-width: 100%;
+}
