--- a/src/app/organization/payment-types/payment-types.component.scss
+++ b/src/app/organization/payment-types/payment-types.component.scss
@@ -13,3 +13,8 @@ table {
 .text-center {
   text-align: center;
 }
+
+.table-container {
+  overflow-x: auto;
+  max-width: 100%;
+}
