--- a/src/app/reports/xbrl/xbrl.component.scss
+++ b/src/app/reports/xbrl/xbrl.component.scss
@@ -1,3 +1,8 @@
 .mat-header-cell, .mat-cell {
     min-width: 50px;
 }
+
+.table-container {
+  overflow-x: auto;
+  max-width: 100%;
+}
